added readme, requirements

--- a/ISLES_Example.ipynb
+++ b/ISLES_Example.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc4141c",
+   "id": "e51ed6f2",
    "metadata": {},
    "source": [
     "### Task 2: ATLAS 2.0\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea9fa97",
+   "id": "89a4e4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1907c9ce",
+   "id": "76e9201c",
    "metadata": {},
    "source": [
     "The data will take a few minutes to download. The resulting file is an encrypted archive; you will first need to decrypt it. You can do so by following the [instructions on the ATLAS 2.0 download page](http://fcon_1000.projects.nitrc.org/indi/retro/atlas_download.html). The following code will prompt you for a password and then decrypt the archive."
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f72b5c53",
+   "id": "84862d50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e46b82",
+   "id": "5bdb8555",
    "metadata": {},
    "source": [
     "We should now have a directory called `ATLAS_2` in the current working directory:"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c250004b",
+   "id": "fa8643c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d320d72e",
+   "id": "56d412f2",
    "metadata": {},
    "source": [
     "The data distributed by INDI is not compatible with PyBIDS, but the `atlas` module can convert it:"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d325e62c",
+   "id": "cbda8859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8846eb",
+   "id": "bfabd1ed",
    "metadata": {},
    "source": [
     "The data is now split into two directories: `data/train` and `data/test`. Predictably, the `train` directory contains data with labels with which to train your model. The `test` directory is the set of images that your model will need to segment. The archive files you downloaded can now be safely deleted."
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49ee8039",
+   "id": "879eaa0f",
    "metadata": {},
    "source": [
     "## Data Loading"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12412b96",
+   "id": "efe0b241",
    "metadata": {},
    "source": [
     "To train your model, you'll need to load data samples that are matched with their targets. We provide a Python package for doing just that: [BIDSIO](https://github.com/npnl/bidsio). The following code will walk you through loading matched data. We recommend reading through the BIDSIO GitHub page for up-to-date explanations of the different fields."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31cc95e7",
+   "id": "6f782053",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0565f1a",
+   "id": "dcfdf6ab",
    "metadata": {},
    "source": [
     "We'll examine a few properties of the loader. First, let's verify that we have the correct number of subjects:"
@@ -158,20 +158,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26d4bc1",
+   "id": "a4fb26f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "tmp = bids_loader.load_sample(0)\n",
     "print(f'There are {len(bids_loader)} subjects in our dataset.')\n",
     "print(f'Every sample loads {len(tmp)} images.')\n",
-    "print(f'Images have the dimensions: {bids_loader.data_shape}')\n",
+    "print(f'Images have these dimensions: {bids_loader.data_shape}')\n",
     "print(f'Every batch will load {bids_loader.batch_size} samples.')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "347f15de",
+   "id": "01552497",
    "metadata": {},
    "source": [
     "Our loader can also provide a generator to allow us to iterate through the dataset. The generator is accessed via the `load_batches` method:"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4742fd1c",
+   "id": "05692e4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e71e3a6b",
+   "id": "faeb8f86",
    "metadata": {},
    "source": [
     "Note the dimensions of our data; they have been reshaped to be consistent with libraries such as PyTorch:  \n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7220058",
+   "id": "dadcf8ce",
    "metadata": {},
    "source": [
     "## Predictions\n",
@@ -214,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bc0e3d0a",
+   "execution_count": null,
+   "id": "7f9fc7dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,19 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4cef9823",
+   "execution_count": null,
+   "id": "6f7e8c1a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data shape: (4, 1, 197, 233, 189)\n",
-      "Example BIDS file: (<BIDSImageFile filename='/home/lex/NPNL/projects/isles_tutorial/ISLES_tutorial/data/test/derivatives/ATLAS/sub-r005s016/ses-1/anat/sub-r005s016_ses-1_space-MNI152NLin2009aSym_T1w.nii.gz'>,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for dat, image_list in bids_loader.load_batch_for_prediction():\n",
     "    print(f'Data shape: {dat.shape}')\n",
@@ -254,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba412a50",
+   "id": "4ec4abc2",
    "metadata": {},
    "source": [
     "You'll notice that we use a different generator for loading the predictions. This generator also yields the BIDS image file that stored the data. We'll create a new BIDS directory using this information.  \n",
@@ -263,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "05d91813",
+   "execution_count": null,
+   "id": "364e3257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80409b6b",
+   "id": "d14ba955",
    "metadata": {},
    "source": [
     "The `your_model` object will be used a stand-in for a fully-trained model.  \n",
@@ -305,58 +296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c251f8fc",
+   "execution_count": null,
+   "id": "4ef4b5b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function write_image_like in module bidsio.bidsloader:\n",
-      "\n",
-      "write_image_like(data_to_write: <built-in function array>, image_to_imitate: bids.layout.models.BIDSImageFile, new_bids_root: str, new_entities: dict = None)\n",
-      "    Writes an image to a different BIDS directory using the path pattern of an existing image. Optionally\n",
-      "    inserts new entities and replaces existing values.\n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    data_to_write : np.array\n",
-      "        Image data to save.\n",
-      "    image_to_imitate : BIDSImageFile\n",
-      "        Image with BIDS entities to imitate\n",
-      "    new_bids_root : str\n",
-      "        BIDS root to save image in.\n",
-      "    new_entities : dict\n",
-      "        Optional. Entity-value pairs to overwrite\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    None\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(bids_loader.write_image_like)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c8084aca",
+   "execution_count": null,
+   "id": "8553cbde",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing image for subject r005s016\n",
-      "Writing image for subject r005s025\n",
-      "Writing image for subject r005s030\n",
-      "Writing image for subject r005s034\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "example_output_dir = 'prediction_bids/'  # Directory where to write out predictions\n",
     "for dat, image_list in bids_loader.load_batch_for_prediction():\n",
@@ -377,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32fb31f6",
+   "id": "24189f61",
    "metadata": {},
    "source": [
     "We see that we create a file for each subject present in our batch. Let's verify that the files were created."
@@ -385,21 +338,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5d2148a4",
+   "execution_count": null,
+   "id": "e57cc9ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prediction_bids/sub-r005s016/ses-1/anat/sub-r005s016_ses-1_space-MNI152NLin2009aSym_label-L_mask.nii.gz\n",
-      "prediction_bids/sub-r005s034/ses-1/anat/sub-r005s034_ses-1_space-MNI152NLin2009aSym_label-L_mask.nii.gz\n",
-      "prediction_bids/sub-r005s025/ses-1/anat/sub-r005s025_ses-1_space-MNI152NLin2009aSym_label-L_mask.nii.gz\n",
-      "prediction_bids/sub-r005s030/ses-1/anat/sub-r005s030_ses-1_space-MNI152NLin2009aSym_label-L_mask.nii.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "for p, _, fnames in os.walk(example_output_dir):  # Walk through dir structure\n",
@@ -410,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6595c49b",
+   "id": "b502c77e",
    "metadata": {},
    "source": [
     "You should see one image for each sample in a batch, with `label-L` and `mask` inserted into the filename. BIDS requires one more file, `dataset_description.json`, which we can create with `write_dataset_description`:"
@@ -418,45 +360,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "28ec8484",
+   "execution_count": null,
+   "id": "02220fef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function write_dataset_description in module bidsio.bidsloader:\n",
-      "\n",
-      "write_dataset_description(bids_root: str, dataset_name: str, author_names: list = None, derivative_name: str = None, derivative_version: str = '1.0')\n",
-      "    Writes the dataset_description.json file to the BIDS root.\n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    bids_root : str\n",
-      "        Path to the BIDS data root directory.\n",
-      "    dataset_name : str\n",
-      "        Name to enter for the various \"Name\" fields in `dataset_description.json`\n",
-      "    author_names : list\n",
-      "        Optional. List of authors.\n",
-      "    derivative_name : str\n",
-      "        Optional. If not None, write to the `derivatives/derivative_name/` directory instead of the root directory.\n",
-      "    derivative_version : str\n",
-      "        Optional. Version of the pipeline used to generate.\n",
-      "    Returns\n",
-      "    -------\n",
-      "    None\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(bidsio.BIDSLoader.write_dataset_description)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "e183538a",
+   "execution_count": null,
+   "id": "d78f377b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb9be56",
+   "id": "93dec972",
    "metadata": {},
    "source": [
     "We can then take a look at the JSON file:"
@@ -475,18 +390,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "27635f5a",
+   "execution_count": null,
+   "id": "843585b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Name': 'atlas2_prediction', 'BIDSVersion': '1.6.0', 'Authors': ['Hutton, A.'], 'PipelineDescription': {'Name': 'atlas2_prediction'}, 'GeneratedBy': [{'Name': 'atlas2_prediction', 'Version': '1.0'}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json, os\n",
     "f = open(f'{example_output_dir}{os.sep}dataset_description.json')\n",
@@ -497,39 +404,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3bbcd61",
+   "id": "6fe695ac",
    "metadata": {},
    "source": [
-    "Our predictions are now a BIDS-compatible dataset and can be submitted to the GC website."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "33c46965",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BIDS Layout: ...ISLES_tutorial/prediction_bids | Subjects: 4 | Sessions: 4 | Runs: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import bids\n",
-    "prediction_bids = bids.BIDSLayout(root=example_output_dir, derivatives=example_output_dir)\n",
-    "print(prediction_bids.derivatives['atlas2_prediction'])"
+    "Our predictions are now a BIDS-compatible dataset and can be submitted to the Grand Challenge website."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07942bd6",
+   "id": "c58bf7ed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import bids\n",
+    "prediction_bids = bids.BIDSLayout(root=example_output_dir, derivatives=example_output_dir)\n",
+    "print(prediction_bids.derivatives['atlas2_prediction'])"
+   ]
   }
  ],
  "metadata": {
