added note about zip

--- a/ISLES_Example.ipynb
+++ b/ISLES_Example.ipynb
@@ -407,7 +407,7 @@
    "id": "6fe695ac",
    "metadata": {},
    "source": [
-    "Our predictions are now a BIDS-compatible dataset and can be submitted to the Grand Challenge website."
+    "Our predictions are now a BIDS-compatible dataset and can be zipped and submitted to the Grand Challenge website."
    ]
   },
   {
