removed old call to bidsio BIDSGenerator

--- a/ISLES_Example.ipynb
+++ b/ISLES_Example.ipynb
@@ -174,7 +174,7 @@
    "id": "01552497",
    "metadata": {},
    "source": [
-    "Our loader can also provide a generator to allow us to iterate through the dataset. The generator is accessed via the `load_batches` method:"
+    "For iterating through our dataset, we can use the `load_batches` generator:"
    ]
   },
   {
